@@ -264,6 +264,8 @@ WITHUID                   = UID, Unique ID (Prio 9)
 
 ALLOWKEYUSAGEOVERRIDE     = Allow Key Usage Override
 
+ANYEXTENDEDKEYUSAGE       = Any Extended Key Usage
+
 AVAILABLEBITLENGTHS       = Available bit lengths
 
 AUTHORITYKEYID            = Use Authority Key Id
@@ -291,6 +293,10 @@ CERTIFICATEPOLICYID       = Certificate Policy Id
 CERTIFICATEPROFILE        = Certificate profile
 
 CERTIFICATEPROFILEALREADY = Certificate profile already exists.
+
+CLIENTAUTH                = Client Authentication 
+
+CODESIGNING               = Code Signing
 
 CREATECRL                 = Create CRL
 
@@ -326,13 +332,23 @@ EDITCERTIFICATEPROFILES   = Edit Certificate Profiles
 
 EDITCERTPROF              = Edit Certificate Profile
 
+EMAILPROTECTION           = Email Protection
+
 ENDENTITY                 = End Entity
+
+EXTENDEDKEYUSAGE          = Extended Key Usage
 
 FINISHUSER                = Finish User
 
 GETLATESTCRL              = Get latest CRL
 
 GETCRL                    = Get CRL
+
+IPSECENDSYSTEM            = IPSec End System
+ 
+IPSECTUNNEL               = IPSec Tunnel
+
+IPSECUSER                 = IPSec User
 
 KEYUSAGECRITICAL          = Key Usage Critical
 
@@ -348,6 +364,8 @@ ONLYDECNUMBERSINVALIDITY  = Only decimal numbers are allowed in validity field.
 
 ROOTCA                    = Root CA
 
+SERVERAUTH                = Server Authentication
+
 SUBJECTALTNAME            = Use Subject Alternate Name
 
 SUBJECTALTNAMECRITICAL    = Subject Alternate Name Critical
@@ -358,9 +376,13 @@ SUBJECTKEYIDCRITICAL      = Subject Key ID Critical
 
 SUBORDINATECA             = Subordinate CA, level
 
+TIMESTAMPING              = Time Stamping
+
 TYPE                      = Type
 
 USEBASICCONSTRAINTS       = Use Basic Constraints
+
+USEEXTENDEDKEYUSAGE       = Use Extended Key Usage
 
 USEKEYUSAGE               = Use Key Usage  
 
