@@ -1,9 +1,11 @@
 package se.anatom.ejbca.ca.store.certificateprofiles;
 
+import java.util.ArrayList;
+
 /**
  * EndUserCertificateProfile is a class defining the fixed characteristics of an enduser certificate type
  *
-* @version $Id: EndUserCertificateProfile.java,v 1.4 2003-01-12 17:16:29 anatom Exp $
+* @version $Id: EndUserCertificateProfile.java,v 1.5 2003-02-20 09:00:57 herrvendil Exp $
   */
 public class EndUserCertificateProfile extends CertificateProfile{
 
@@ -52,11 +54,37 @@ public class EndUserCertificateProfile extends CertificateProfile{
       setKeyUsage(new boolean[9]);
       setKeyUsage(DIGITALSIGNATURE,true);
       setKeyUsage(KEYENCIPHERMENT,true);
-
+      
+      setUseExtendedKeyUsage(true);
+      ArrayList eku = new ArrayList();
+      eku.add(new Integer(CLIENTAUTH));
+      eku.add(new Integer(EMAILPROTECTION));
+      eku.add(new Integer(IPSECUSER));  
+      setExtendedKeyUsage(eku);
+      
     }
 
     // Public Methods.
+    public void upgrade(){    
+      if(LATEST_VERSION != getVersion()){
+        // New version of the class, upgrade
+
+        data.put(VERSION, new Float(LATEST_VERSION));
+        if(data.get(ALLOWKEYUSAGEOVERRIDE) == null)
+          data.put(ALLOWKEYUSAGEOVERRIDE, Boolean.TRUE);
+        if(data.get(USEEXTENDEDKEYUSAGE) ==null)
+          data.put(USEEXTENDEDKEYUSAGE, Boolean.TRUE);
+        if(data.get(EXTENDEDKEYUSAGE) ==null){
+           ArrayList eku = new ArrayList();
+           eku.add(new Integer(CLIENTAUTH));
+           eku.add(new Integer(EMAILPROTECTION));
+           eku.add(new Integer(IPSECUSER));             
+           data.put(EXTENDEDKEYUSAGE, eku);
+        }
+      }
+    }    
 
 
     // Private fields.
+    
 }
